--- a/20_operator_logika.html
+++ b/20_operator_logika.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <!-- operator logika adalah operator untuk dua buah data boolean, hasil dari operator tersebut juga boolean -->
-    
+    <script>
+        //&& and
+        // || or
+        // ! not
+        const nilaiUjian = 70;
+        const nilaiAbsensi = 70;
+
+        const lulusUjian = nilaiUjian > 75;
+        const lulusAbsensi = nilaiAbsensi > 75;
+
+        const lulus = lulusUjian && lulusAbsensi;
+        document.writeln("<p>" + lulus + "</p>")
+    </script>
 </body>
 </html>
